--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@jest/globals": "^27.0.6",
     "axios": "^0.21.1",
     "jest": "^27.0.6",
