--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
     "browser": true,
     "es6": true,
     "node": true,
-    "commonjs": true
+    "commonjs": true,
+    "jest": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
@@ -140,9 +141,6 @@
   "globals": {
     "angular": false,
     "module": false,
-    "inject": false,
-    "describe": false,
-    "it": false,
-    "test": false
+    "inject": false
   }
 }
